fix visible graph layout on right sidepanel

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,7 +45,8 @@
   overflow: auto;
   width: 25%;
   position: fixed;
-  height: 89%;
+  max-height: 89%;
+  //height: 89%;
   //float: right;
   right: 8px;
   top: 120px
